force-app/main/default/objects/Contact/fields/Account_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_City__c</fullName>
    <formula>Account.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing City</label>
    <type>Text</type>
</CustomField>