force-app/main/default/objects/Contact/fields/Account_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_State__c</fullName>
    <formula>Account.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing State</label>
    <type>Text</type>
</CustomField>