force-app/main/default/objects/Contact/fields/Account_Billing_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Street_Address__c</fullName>
    <formula>Account.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Street Address</label>
    <type>Text</type>
</CustomField>