force-app/main/default/objects/Contact/fields/Account_Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Zip__c</fullName>
    <formula>Account.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Zip</label>
    <type>Text</type>
</CustomField>