force-app/main/default/objects/Contact/fields/AE_Division__c.field-meta.xml
<CustomField>
    <fullName>AE_Division__c</fullName>
    <label>AE Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>