force-app/main/default/objects/Contact/fields/AE_Division_Formula__c.field-meta.xml
<CustomField>
    <fullName>AE_Division_Formula__c</fullName>
    <formula>Owner.Division</formula>
    <label>AE Division</label>
    <type>Text</type>
</CustomField>