force-app/main/default/objects/Contact/fields/AE_Email__c.field-meta.xml
<CustomField>
    <fullName>AE_Email__c</fullName>
    <label>AE Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>