force-app/main/default/objects/Contact/fields/AE_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>AE_Email_Formula__c</fullName>
    <formula>Owner.Email</formula>
    <label>AE Email</label>
    <type>Text</type>
</CustomField>