force-app/main/default/objects/Contact/fields/AE_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>AE_Full_Name__c</fullName>
    <label>AE Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>