force-app/main/default/objects/Contact/fields/AE_Full_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>AE_Full_Name_Formula__c</fullName>
    <formula>Owner.FirstName&amp;&quot; &quot;&amp;Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE Full Name</label>
    <type>Text</type>
</CustomField>