force-app/main/default/objects/Contact/fields/AE_Phone__c.field-meta.xml
<CustomField>
    <fullName>AE_Phone__c</fullName>
    <label>AE Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>