force-app/main/default/objects/Contact/fields/AE_Phone_Formula__c.field-meta.xml
<CustomField>
    <fullName>AE_Phone_Formula__c</fullName>
    <formula>Owner.Phone</formula>
    <label>AE Phone</label>
    <type>Text</type>
</CustomField>