force-app/main/default/objects/Contact/fields/AE_Title__c.field-meta.xml
<CustomField>
    <fullName>AE_Title__c</fullName>
    <label>AE Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>