force-app/main/default/objects/Contact/fields/AE_Title_Formula__c.field-meta.xml
<CustomField>
    <fullName>AE_Title_Formula__c</fullName>
    <formula>Owner.Title</formula>
    <label>AE Title</label>
    <type>Text</type>
</CustomField>