force-app/main/default/objects/Contact/fields/Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_ID__c</fullName>
    <label>Agent ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>