force-app/main/default/objects/Contact/fields/Agent_Member_Since_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Agent_Member_Since_Quarter__c</fullName>
    <label>Agent Member Since Quarter</label>
    <length>2</length>
    <type>Text</type>
</CustomField>