force-app/main/default/objects/Contact/fields/Agent_Member_Since_Year__c.field-meta.xml
<CustomField>
    <fullName>Agent_Member_Since_Year__c</fullName>
    <label>Agent Member Since Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>