force-app/main/default/objects/Contact/fields/CCMID_Match__c.field-meta.xml
<CustomField>
    <fullName>CCMID_Match__c</fullName>
    <formula>LastName &amp; FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCMID Match</label>
    <type>Text</type>
</CustomField>