force-app/main/default/objects/Contact/fields/Contact_Position__c.field-meta.xml
<CustomField>
    <fullName>Contact_Position__c</fullName>
    <inlineHelpText>Select the role or position of the person in the brokers office</inlineHelpText>
    <label>Contact Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>Operations Manager</fullName>
            </value>
            <value>
                <fullName>Team Leader</fullName>
            </value>
            <value>
                <fullName>Receptionist/Front Desk</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Transaction Coordinator</fullName>
            </value>
            <value>
                <fullName>Other (Specialty)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>