force-app/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <description>Use this to identify your top 500 target agents.</description>
    <inlineHelpText>Use this to identify your top 500 target agents.</inlineHelpText>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hero Agent</fullName>
            </value>
            <value>
                <fullName>Target Agent (producing)</fullName>
                <label>Top Client Producing Agent</label>
            </value>
            <value>
                <fullName>Target Preferred Broker Agent</fullName>
                <label>Top Client Prospect Agent</label>
            </value>
            <value>
                <fullName>Target New Agent</fullName>
                <label>Top Prospect Agent</label>
            </value>
            <value>
                <fullName>Hot List</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Active Client</fullName>
            </value>
            <value>
                <fullName>Inactive agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>