force-app/main/default/objects/Contact/fields/Coop_Buyer_Sides_Units__c.field-meta.xml
<CustomField>
    <fullName>Coop_Buyer_Sides_Units__c</fullName>
    <label>Coop Buyer Sides – Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>