force-app/main/default/objects/Contact/fields/Coop_Buyers_Sides_Volume__c.field-meta.xml
<CustomField>
    <fullName>Coop_Buyers_Sides_Volume__c</fullName>
    <label>Coop Buyers Sides – Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>