force-app/main/default/objects/Contact/fields/Date_of_Last_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Attempt__c</fullName>
    <label>Date of Last Attempt</label>
    <type>Date</type>
</CustomField>