force-app/main/default/objects/Contact/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this if you do not want any email or marketing communications to go to this contact</description>
    <inlineHelpText>Select this if you do not want any email or marketing communications to go to this contact</inlineHelpText>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>