force-app/main/default/objects/Contact/fields/Do_Not_Contact_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact_Picklist__c</fullName>
    <description>Picklist for Real Estate - select Yes if you do not want emails and communications sent to this customer.</description>
    <inlineHelpText>Select &apos;Yes&quot; if you do not want emails and communication sent to this customer.</inlineHelpText>
    <label>Do Not Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>