force-app/main/default/objects/Contact/fields/Double_End_Sides_Units__c.field-meta.xml
<CustomField>
    <fullName>Double_End_Sides_Units__c</fullName>
    <label>Double End Sides – Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>