force-app/main/default/objects/Contact/fields/Double_End_Sides_Volume__c.field-meta.xml
<CustomField>
    <fullName>Double_End_Sides_Volume__c</fullName>
    <label>Double End Sides – Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>