force-app/main/default/objects/Contact/fields/Email_2__c.field-meta.xml
<CustomField>
    <fullName>Email_2__c</fullName>
    <description>use for personal or secondary email address</description>
    <inlineHelpText>use for personal or secondary email address</inlineHelpText>
    <label>Email 2</label>
    <type>Email</type>
</CustomField>