force-app/main/default/objects/Contact/fields/Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify a contact that has actively consented to receiving our email communications.</description>
    <inlineHelpText>This contact has actively consented to receiving our email communications.</inlineHelpText>
    <label>Email Opt-In</label>
    <type>Checkbox</type>
</CustomField>