force-app/main/default/objects/Contact/fields/Holiday_Candy__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Candy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holiday Candy</label>
    <type>Checkbox</type>
</CustomField>