force-app/main/default/objects/Contact/fields/Industry_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Industry_Line_of_Business__c</fullName>
    <label>Industry/Line of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>