force-app/main/default/objects/Contact/fields/Initial_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Attempt_Date__c</fullName>
    <label>Initial Attempt Date</label>
    <type>Date</type>
</CustomField>