force-app/main/default/objects/Contact/fields/Listings_sold_Average__c.field-meta.xml
<CustomField>
    <fullName>Listings_sold_Average__c</fullName>
    <formula>Listings_sold_Volume__c  /  Listings_Sold_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listings Sold - Average</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>