force-app/main/default/objects/Contact/fields/Listings_sold_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Listings_sold_Revenue__c</fullName>
    <label>Listings Sold - Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>