force-app/main/default/objects/Contact/fields/Listings_Sold_Units__c.field-meta.xml
<CustomField>
    <fullName>Listings_Sold_Units__c</fullName>
    <label>Listings Sold - Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>