force-app/main/default/objects/Contact/fields/Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Location_ID__c</fullName>
    <label>Location ID</label>
    <length>70</length>
    <type>Text</type>
</CustomField>