force-app/main/default/objects/Contact/fields/Logo_ID_Code__c.field-meta.xml
<CustomField>
    <fullName>Logo_ID_Code__c</fullName>
    <label>Logo ID Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>