force-app/main/default/objects/Contact/fields/Logo_ID_CodeOLD__c.field-meta.xml
<CustomField>
    <fullName>Logo_ID_CodeOLD__c</fullName>
    <formula>Account.Logo_ID_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OLD Logo ID Code DO NOT USE</label>
    <type>Text</type>
</CustomField>