force-app/main/default/objects/Contact/fields/Match_Key__c.field-meta.xml
<CustomField>
    <fullName>Match_Key__c</fullName>
    <formula>SUBSTITUTE(LastName,&quot; &quot;,&quot;&quot;) + LEFT(SUBSTITUTE(FirstName,&quot; &quot;,&quot;&quot;), 1) + LEFT( SUBSTITUTE(MailingStreet,&quot; &quot;,&quot;&quot;), 5) + LEFT(SUBSTITUTE(MailingPostalCode,&quot; &quot;,&quot;&quot;), 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Match Key</label>
    <type>Text</type>
</CustomField>