force-app/main/default/objects/Contact/fields/MLS_ID__c.field-meta.xml
<CustomField>
    <fullName>MLS_ID__c</fullName>
    <description>This field comes from RDS and shows the multiple listing service the contact record came from.</description>
    <inlineHelpText>This field comes from RDS and shows the multiple listing service the contact record came from.</inlineHelpText>
    <label>MLS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>