force-app/main/default/objects/Contact/fields/MLS_Join_Month_and_Year__c.field-meta.xml
<CustomField>
    <fullName>MLS_Join_Month_and_Year__c</fullName>
    <formula>Agent_Member_Since_Quarter__c &amp; &quot; &quot; &amp; Agent_Member_Since_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MLS Join Month and Year</label>
    <type>Text</type>
</CustomField>