force-app/main/default/objects/Contact/fields/Previous_CCMID__c.field-meta.xml
<CustomField>
    <fullName>Previous_CCMID__c</fullName>
    <description>If the CCMID changes based on recent Enrollments, this stores the previous value of the CCMID, before the change</description>
    <inlineHelpText>If the CCMID changes based on recent Enrollments, this stores the previous value of the CCMID, before the change</inlineHelpText>
    <label>Previous CCMID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>