force-app/main/default/objects/Contact/fields/ShippingState__c.field-meta.xml
<CustomField>
    <fullName>ShippingState__c</fullName>
    <formula>Account.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShippingState</label>
    <type>Text</type>
</CustomField>