force-app/main/default/objects/Contact/fields/ShippingZip__c.field-meta.xml
<CustomField>
    <fullName>ShippingZip__c</fullName>
    <formula>Account.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShippingZip</label>
    <type>Text</type>
</CustomField>