force-app/main/default/objects/Contact/fields/Text_CCMID_Match__c.field-meta.xml
<CustomField>
    <fullName>Text_CCMID_Match__c</fullName>
    <label>Text CCMID Match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>