force-app/main/default/objects/Contact/fields/Total_Active_Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Enrollments__c</fullName>
    <label>Total Active Enrollments</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>