force-app/main/default/objects/Contact/fields/Total_Sides_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Sides_Units__c</fullName>
    <label>Total Sides - Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>