force-app/main/default/objects/Contact/fields/Total_Sides_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Sides_Volume__c</fullName>
    <label>Total Sides – Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>