force-app/main/default/objects/Contact/fields/Unique_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Agent_ID__c</fullName>
    <formula>Agent_ID__c+ &quot;_|_&quot; +MLS_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Agent ID</label>
    <type>Text</type>
</CustomField>