force-app/main/default/objects/Contact/fields/Unique_Agent_ID_TEXT_Field__c.field-meta.xml
<CustomField>
    <fullName>Unique_Agent_ID_TEXT_Field__c</fullName>
    <description>a unique field as text imported rather than calculation</description>
    <externalId>true</externalId>
    <label>Unique Agent ID TEXT Field</label>
    <length>70</length>
    <type>Text</type>
</CustomField>