force-app/main/default/objects/Contact/fields/Update_Field_To_Push_To_Marketing_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Update_Field_To_Push_To_Marketing_Cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Field To Push To Marketing Cloud</label>
    <type>Checkbox</type>
</CustomField>