force-app/main/default/objects/Contact/fields/X18_Digit_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Contact_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Contact Id</label>
    <type>Text</type>
</CustomField>