force-app/main/default/objects/Contact/recordTypes/Contacts_for_Business_Development.recordType-meta.xml
<RecordType>
    <fullName>Contacts_for_Business_Development</fullName>
    <active>true</active>
    <label>Contacts for Business Development</label>
</RecordType>