force-app/main/default/objects/Contact/recordTypes/Contacts_for_HMS.recordType-meta.xml
<RecordType>
    <fullName>Contacts_for_HMS</fullName>
    <active>true</active>
    <label>Contacts for HMS</label>
</RecordType>