force-app/main/default/objects/Contact/recordTypes/TA_Coordinators.recordType-meta.xml
<RecordType>
    <fullName>TA_Coordinators</fullName>
    <active>true</active>
    <description>Use this to track TA Coordinators</description>
    <label>TA Coordinators</label>
</RecordType>