force-app/main/default/objects/Contact/listViews/Do_Not_Contact_BLANK.listView-meta.xml
<ListView>
    <fullName>Do_Not_Contact_BLANK</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Do_Not_Contact__c</columns>
    <columns>Do_Not_Contact_Picklist__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Do_Not_Contact_Picklist__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Do_Not_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Do Not Contact = BLANK</label>
</ListView>