force-app/main/default/objects/Contact/listViews/For_Event_List_Email_Attended.listView-meta.xml
<ListView>
    <fullName>For_Event_List_Email_Attended</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN_MEMBER.STATUS</field>
        <operation>equals</operation>
        <value>Attended</value>
    </filters>
    <label>For Event List Email: Attended</label>
</ListView>