force-app/main/default/objects/Contact/listViews/Inactive_Prospect_Contacts.listView-meta.xml
<ListView>
    <fullName>Inactive_Prospect_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Total_Sides_Units__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Most_Recent_Enrollment_Date__c</columns>
    <columns>Total_Active_Enrollments__c</columns>
    <columns>Contact_Status__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Account_Billing_Street_Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Status__c</field>
        <operation>equals</operation>
        <value>Prospect,Inactive agent</value>
    </filters>
    <label>Inactive/Prospect Contacts</label>
</ListView>